Prevent long links from clipping at narrow viewports.
Fixes #275.

--- a/source/wp-content/themes/wporg-developer/scss/main.scss
+++ b/source/wp-content/themes/wporg-developer/scss/main.scss
@@ -1968,6 +1968,7 @@ aside[id^="nav_menu"] .widget-title {
 		ul {
 			font-size: 1.05em;
 			color: #555;
+			overflow-wrap: break-word;
 		}
 	}
 
